# LillavPy

./: README.md  first.py  pyproject.toml
leeson_x/: h09_14_blanc.ipynb
leeson_x/lillav/: pyvenv.cfg
lesson1/: 01-02-intro.ipynb  Intro.ipynb  lecture01.ipynb  lecture02.ipynb
lesson2/: Simle_strs.ipynb
lesson3/: Firsov3.ipynb
lesson4/: Untitled.ipynb
lesson4/package1/: my_func.py
lesson4/utils/: utils.py
lesson5/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  elements.txt  redwood.ipynb
lesson6/: h09_09_blanc.ipynb  kinetics.txt
lesson6/share/: ex2-6-g-esi-data.txt
lesson_numpy/: Untitled.ipynb
