[tool.poetry]
name = "lillavpy"
version = "0.1.0"
description = ""
authors = ["Ega2901 <mr.tuzharov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.4"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
